# ryder-bridge-rust

./: Cargo.toml  Makefile  README.md
mock/: Cargo.toml
mock/src/: client.rs  lib.rs  serial.rs
src/: connection.rs  lib.rs  main.rs  queue.rs
src/mock/: mod.rs  serial.rs
src/serial/: client.rs  mod.rs  port.rs  server.rs
tests/: tests.rs
