[package]
name = "ryder-bridge-rust"
version = "0.1.0"
edition = "2021"
default-run = "ryder-bridge-rust"


[dependencies]
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1.18.0",  features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "0.17.1"
#serialport = "4.2.0"
#this commit contains a fix for macOS https://github.com/serialport/serialport-rs/pull/58
serialport = { git = "https://github.com/serialport/serialport-rs.git", rev = "6542d11" }
url = "2.2.2"
