[package]
name = "ryder-bridge-rust"
version = "0.1.0"
edition = "2021"
default-run = "ryder-bridge-rust"


[dependencies]
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1.18.0",  features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "0.17.1"
url = "2.2.2"
# Missing a fix for macOS: https://github.com/serialport/serialport-rs/pull/58
# It will be included in serialport 4.2.1
tokio-serial = "5.4.3"
