[package]
name = "ryder-bridge"
version = "0.1.0"
edition = "2021"
default-run = "ryder-bridge"


[dependencies]
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1.18.0",  features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "0.17.1"
url = "2.2.2"

[dependencies.serialport]
# Temporary until serialport 4.2.1 is released
git = "https://github.com/serialport/serialport-rs.git"
rev = "536e1a5"
